# NOTE: you have to use single-quoted strings in TOML for regular expressions.

[build-system]
requires = [
  "pip>=19.1.1",
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]

[project]
name = "xtgeoviz"
dynamic = ["version"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _buildsetuptools.scm
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | profiling
)/
'''

[tool.setuptools_scm]
write_to = "src/xtgeoviz/version.py"
