[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/xtgeoviz/version.py"

[project]
name = "xtgeoviz"
description = "Plotting library for xtgeo objects"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Equinor", email = "fg_fmu-atlas@equinor.com" },
]
keywords = [
    "energy",
    "subsurface",
    "reservoir",
    "scientific",
    "engineering",
    "maps",
    "xtgeo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers", 
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dynamic = ["version"]
dependencies = [
    "PyYAML",
    "matplotlib>=3.3.2",
    "numpy<2",
    "scipy>=1.5.3",
    "xtgeo",
]

[project.optional-dependencies]
tests = [
    "coverage>=4.1",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-runner",
    "pytest-xdist",
    "rstcheck",
    "ruff",
    "types-PyYAML",
]
docs = [
    "autoapi",
    "myst-parser",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
]

[project.urls]
Homepage = "https://github.com/equinor/xtgeoviz"
Repository = "https://github.com/equinor/xtgeoviz"
Documentation = "https://github.com/equinor/xtgeoviz"
Issues = "https://github.com/equinor/xtgeoviz/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "C901",
]
select = [
    "C",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "TCH",
    "TID",
    "W",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
log_cli = "False"
log_cli_format = "%(levelname)8s (%(relativeCreated)6.0fms) %(filename)44s [%(funcName)40s()] %(lineno)4d >>   %(message)s"
log_cli_level = "INFO"
testpaths = "tests"
markers = [
    "integration: Integration tests",
]
